--- a/delivr-aide-react-website-1.0/src/styles/style.css
+++ b/delivr-aide-react-website-1.0/src/styles/style.css
@@ -42,7 +42,7 @@ body {
 }
 
 .navbar-wrapper .navbar-brand {
-  height: 8vw;
+  height: 7.5vw;
   width: 30vw;
   -ms-flex-line-pack: end;
       align-content: flex-end;
@@ -147,6 +147,7 @@ body {
   border-radius: 169.5px 0px;
   width: 100%;
   margin-bottom: 40px;
+  overflow-x: hidden;
 }
 
 .info-banner .info-banner-column-wrapper {
@@ -251,6 +252,7 @@ body {
       -ms-flex-direction: column;
           flex-direction: column;
   margin-bottom: 40px;
+  overflow: hidden;
   gap: 10px;
 }
 
@@ -331,6 +333,7 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  overflow: hidden;
 }
 
 .caroussel-container {
@@ -341,6 +344,8 @@ body {
 .caroussel-container .slide-img {
   height: 80vh;
   border-radius: 25px;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .caroussel-container .slide-img:hover {
@@ -456,6 +461,7 @@ body {
       -ms-flex-direction: column;
           flex-direction: column;
   margin-bottom: 40px;
+  overflow: hidden;
 }
 
 .donation-wrapper .donation-column-wrapper {
